--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -169,7 +169,7 @@ Files: jlt_data_class.f90, jlt_exchange_class.f90
 
 Routines
  set_mapping_table_send_intpl : [mod]
- local_2_exchange           : [mod]
+ local_2_exchange             : [mod]
  他
  
 Detail
@@ -183,7 +183,58 @@ Date:2025/05/01
 Files: jlt_data_class.f90
 
 Routines
- mod funcsions           l : [mod]
+ mod funcsions                : [mod]
  
 Detail
  mod関数のkind指定で明示的に変数の型を用いるよう変更
+
+-----------------------------------------------------------------
+
+Version:0.020700
+Date:2025/06/02
+
+Files: jlt_mpi_lib.f90
+
+Routines
+ jml_init                     : [mod]
+ jml_ProbleLeader             : [mod]
+ jml_send_real_1d_leader      : [mod]
+ jml_recv_real_1d_leader      : [mod]
+ jml_send_double_1d_leader    : [mod]
+ jml_recv_double_1d_leader    : [mod]
+ jml_isend_double_1d_local    : [mod]
+ jml_irecv_double_1d_local    : [mod]
+ jml_isend_double_1d_model    : [mod]
+ jml_isend_double_1d_model2   : [mod]
+ jml_isend_double_1d_model3   : [mod]
+ jml_isend_double_2d_model    : [mod]
+ jml_isend_double_2d_model2   : [mod]
+ jml_isend_double_2d_model3   : [mod]
+ jml_isend_int_1d_model       : [mod]
+ jml_isend_int_1d_model2      : [mod]
+ jml_irecv_double_1d_model    : [mod]
+ jml_irecv_double_1d_model2   : [mod]
+ jml_irecv_double_1d_model3   : [mod]
+ jml_irecv_int_1d_model       : [mod]
+ jml_irecv_int_1d_model2      : [mod]
+ 
+Detail
+ MPI通信で送受信tagの値の上限を設定し、上限を超えた場合にエラーで落ちるよう変更。
+
+-----------------------------------------------------------------
+
+Version:0.020800
+Date:2025/06/02
+
+Files: jlt_exchange_class.f90
+
+Routines
+ send_send_grid_index         : [mod]
+ recv_send_grid_index         : [mod]
+ recv_send_grid_index         : [mod]
+ recv_recv_grid_index         : [mod]
+ 
+Detail
+ MPI通信でtagが制限値を上回らないようにtagの計算を修正。
+ 
+
