--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -282,6 +282,28 @@ Routines
 Detail
  補間計算をスレッド並列できるようにconv_tableを2次元化し、interpolate_dataも2次元化した。
  
+-----------------------------------------------------------------
+
+Version:0.030000
+Date:2025/06/09
+
+Files: jlt_constant.f90, jlt_exchange_class.f90, jlt_exchange.f90, jlt_interface.f90
+
+Routines
+ INTPL_SERIAL_FAST            : [add]
+ INTPL_SERIAL_SAFE            : [add]
+ INTPL_PARALLEL               : [add]
+ set_mapping_table_send_intpl : [mod]
+ set_mapping_table_recv_intpl : [mod]
+ interpolate_data             : [mod]
+ inteterpolate_data_serial    : [add]
+ inteterpolate_data_parallel  : [add]
+ set_mapping_table            : [mod]
+ jlt_set_mapping_table        : [mod]
+ 
+Detail
+ 補間計算をスレッド並列できるようにconv_tableを2次元化し、interpolate_dataも2次元化した。
+ 
  
  
 
